# ApexOS-RV

./: .gitignore  BACKLOG.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  PRD.md  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
agent-core/: Cargo.toml
agent-core/src/: gateway.rs  goal.rs  lib.rs  state.rs
docs/: resources.md
docs/upstream/: apexos-protocol-no_std.patch  goal-driver-design.md
kernel/: Cargo.toml  build.rs  memory.x
kernel/src/: agent.rs  heap.rs  main.rs  proto.rs  qemu.rs  time.rs  uart.rs
kernel/src/net/: mesh.rs  mod.rs  smoke.rs  smol.rs
scripts/: run-live.sh  run-mesh-qemu.sh  run-qemu.sh
xtest/: Cargo.toml
xtest/src/: lib.rs
xtest/tests/: cross_repo.rs
