[workspace]
members         = ["kernel", "agent-core", "vendor/apexos-protocol"]   # + "xtest" (P8)
default-members = ["kernel"]
resolver        = "2"

[workspace.package]
version    = "0.1.0"
edition    = "2021"            # match upstream ApexOS-RS
license    = "Apache-2.0"
authors    = ["buckster123 (André)"]
repository = "https://github.com/buckster123/ApexOS-RV"

[workspace.dependencies]
# Mirrors upstream ApexOS-RS root so the pristine vendored protocol builds unchanged (P5.1).
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
