[package]
name = "apexos-rv-agent-core"
version.workspace = true
edition.workspace = true

[dependencies]
apexos-protocol = { path = "../vendor/apexos-protocol", default-features = false, features = ["alloc"] }
serde           = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json      = { version = "1", default-features = false, features = ["alloc"] }
