[package]
name    = "apexos-rv-kernel"
version.workspace = true
edition.workspace = true

[dependencies]
riscv            = { version = "0.16", features = ["critical-section-single-hart"] }
critical-section = "1.2"  # API crate; the impl comes from riscv's single-hart feature
# `memory` feature (0.18, cortex-m-rt style): generated link.x INCLUDEs our memory.x
# from the link-search path (build.rs) — only -Tlink.x is passed, no -Tmemory.x.
riscv-rt       = { version = "0.18", features = ["memory"] }
embedded-alloc   = { version = "0.7", default-features = false, features = ["llff"] }  # smallest allocator (D5)
# Phase 5+:
# apexos-protocol = { path = "../vendor/apexos-protocol", default-features = false, features = ["alloc"] }
# serde_json      = { version = "1", default-features = false, features = ["alloc"] }
# Phase 6+:
# apexos-rv-agent-core = { path = "../agent-core" }

[features]
panic-test  = []
tiny-heap   = []   # P4 negative gate: 1 KiB heap → OOM must panic readably
fail-script = []
