[package]
name    = "apexos-rv-kernel"
version.workspace = true
edition.workspace = true

[dependencies]
riscv            = { version = "0.16", features = ["critical-section-single-hart"] }
critical-section = "1.2"  # API crate; the impl comes from riscv's single-hart feature
# `memory` feature (0.18, cortex-m-rt style): generated link.x INCLUDEs our memory.x
# from the link-search path (build.rs) — only -Tlink.x is passed, no -Tmemory.x.
riscv-rt       = { version = "0.18", features = ["memory"] }
embedded-alloc   = { version = "0.7", default-features = false, features = ["llff"] }  # smallest allocator (D5)
apexos-protocol  = { path = "../vendor/apexos-protocol", default-features = false, features = ["alloc"] }
serde_json       = { version = "1", default-features = false, features = ["alloc"] }
apexos-rv-agent-core = { path = "../agent-core" }
virtio-drivers = "0.13"
smoltcp = { version = "0.13", default-features = false, features = ["medium-ethernet", "proto-ipv4", "socket-tcp", "alloc"] }

[features]
panic-test  = []
tiny-heap   = []   # P4 negative gate: 1 KiB heap → OOM must panic readably
fail-script = []
net-smoke   = []   # P10 gate: TCP echo against the host mock, then exit
